5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1585_1570.log
== TEST (2019-03-24 21:31:34) 
-- CODE:
va1=input();
print(var1.lower());

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(var1.lower());
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:31:45) 
-- CODE:
va1=input();
print(var1.lower());

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(var1.lower());
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 21:33:03) 
-- CODE:
var1=input();
print(var1.lower());

-- EXECUTION TIME:
0.142576
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
primeiro_caso_de_teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
